[gd_scene load_steps=24 format=3 uid="uid://ckxehb6c5xtaw"]

[ext_resource type="Script" path="res://human.gd" id="1_2hq42"]
[ext_resource type="AudioStream" uid="uid://dhaljlw5ylqpg" path="res://Audio/Footsteps/GWJ52 SFX - Footstep 1.wav" id="2_sf81s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xw0eb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2tcbg"]
albedo_color = Color(0, 0.266667, 0.305882, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7amvq"]
material = SubResource("StandardMaterial3D_2tcbg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_skwdu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_605t1"]
albedo_color = Color(1, 0.819608, 0.627451, 1)

[sub_resource type="SphereMesh" id="SphereMesh_u8m31"]
material = SubResource("StandardMaterial3D_605t1")
radius = 0.3
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_legsy"]
albedo_color = Color(1, 0.819608, 0.627451, 1)

[sub_resource type="SphereMesh" id="SphereMesh_1pxja"]
material = SubResource("StandardMaterial3D_legsy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_85dug"]
transparency = 1
albedo_color = Color(0, 0, 0.698039, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ta0i0"]
material = SubResource("StandardMaterial3D_85dug")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y85st"]
albedo_color = Color(0.341176, 0.196078, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h50pg"]
material = SubResource("StandardMaterial3D_y85st")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34k5q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4yl5n"]
albedo_color = Color(0.341176, 0.196078, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8trk3"]
material = SubResource("StandardMaterial3D_4yl5n")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nx68"]

[sub_resource type="Curve" id="Curve_ll1eg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.210145, 1), 0.0, 0.0, 0, 0, Vector2(0.782609, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_3rph0"]
curve = SubResource("Curve_ll1eg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xvbwt"]
emission_shape = 2
emission_sphere_radius = 0.5
direction = Vector3(0, 1, 0)
initial_velocity_min = 3.0
initial_velocity_max = 3.0
scale_curve = SubResource("CurveTexture_3rph0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_akury"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_hrupu"]
material = SubResource("StandardMaterial3D_akury")
size = Vector2(0.2, 0.2)

[node name="NPC" type="RigidBody3D" groups=["npc"]]
collision_layer = 8
collision_mask = 15
mass = 5.0
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
linear_damp = 5.05
script = ExtResource("1_2hq42")

[node name="SFXFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sf81s")
volume_db = -5.53
pitch_scale = 0.66
mix_target = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01529, 0)
shape = SubResource("CapsuleShape3D_xw0eb")

[node name="Agent" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
path_desired_distance = 2.0
target_desired_distance = 10.0
path_height_offset = 2.0
avoidance_enabled = true
radius = 1.0

[node name="Pivot" type="Node3D" parent="."]

[node name="Shirt" type="MeshInstance3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1.37663, 0, 0, 0, 0.558, 0, 0, 0, 0.8, 0, 1.38098, 0)
mesh = SubResource("CapsuleMesh_7amvq")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_skwdu")

[node name="Boobs" type="MeshInstance3D" parent="Pivot/Shirt"]
unique_name_in_owner = true
transform = Transform3D(-1.96866e-08, -0.450375, -1.96866e-08, 0, -4.85683e-08, 1.11111, -0.775, 3.38764e-08, 1.48079e-15, -0.180502, 0.398925, -0.320575)
visible = false
mesh = SubResource("SphereMesh_u8m31")
skeleton = NodePath("../..")

[node name="Boobs2" type="MeshInstance3D" parent="Pivot/Shirt"]
unique_name_in_owner = true
transform = Transform3D(-1.96866e-08, -0.450375, -1.96866e-08, 0, -4.85683e-08, 1.11111, -0.775, 3.38764e-08, 1.48079e-15, 0.171421, 0.398925, -0.320575)
visible = false
mesh = SubResource("SphereMesh_u8m31")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(-2.71011e-08, -0.62, -2.71011e-08, 0, -2.71011e-08, 0.62, -0.62, 2.71011e-08, 1.18463e-15, 0, 2.15105, 0)
mesh = SubResource("SphereMesh_1pxja")

[node name="Hat" type="MeshInstance3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(-2.14623e-08, -0.491, -2.14623e-08, 0, -2.14623e-08, 0.491, -0.491, 2.14623e-08, 9.38147e-16, 0, 2.30099, 0)
mesh = SubResource("SphereMesh_ta0i0")

[node name="Pants" type="Node3D" parent="Pivot"]

[node name="Pants1" type="MeshInstance3D" parent="Pivot/Pants"]
unique_name_in_owner = true
transform = Transform3D(0.64582, 0, 0, 0, 0.725531, 0, 0, 0, 0.674277, 0.27, 0.724, 0)
mesh = SubResource("CapsuleMesh_h50pg")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_34k5q")

[node name="Pants2" type="MeshInstance3D" parent="Pivot/Pants"]
unique_name_in_owner = true
transform = Transform3D(0.64582, 0, 0, 0, 0.725531, 0, 0, 0, 0.674277, -0.27, 0.724, 0)
mesh = SubResource("CapsuleMesh_8trk3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_5nx68")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="BloodParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10778, 0)
emitting = false
amount = 40
one_shot = true
explosiveness = 0.19
process_material = SubResource("ParticleProcessMaterial_xvbwt")
draw_pass_1 = SubResource("QuadMesh_hrupu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="velocity_computed" from="Agent" to="." method="velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
